<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Tela1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundologin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="329dp"
        android:layout_height="78dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txtlogin"
        android:textColor="#105313"
        android:textColorHighlight="#105313"
        android:textColorHint="#105313"
        android:textColorLink="#105313"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/txtnome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txtnome"
        android:layout_width="268dp"
        android:layout_height="92dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="-15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/txtnome"
        android:inputType="text"
        android:textColor="#105313"
        android:textColorHighlight="#105313"
        android:textColorHint="#105313"
        android:textColorLink="#105313"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlogin"
        tools:ignore="TextContrastCheck" />


    <EditText
        android:id="@+id/txtemail"
        android:layout_width="259dp"
        android:layout_height="86dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/txtemail"
        android:inputType="textEmailAddress"
        android:textColor="#105313"
        android:textColorHighlight="#105313"
        android:textColorHint="#105313"
        android:textColorLink="#105313"
        app:layout_constraintBottom_toTopOf="@+id/txtsenha1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnome"
        tools:ignore="TextContrastCheck" />


    <EditText
        android:id="@+id/txtsenha1"
        android:layout_width="256dp"
        android:layout_height="84dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/txtsenha1"
        android:inputType="textPassword"
        android:textColor="#105313"
        android:textColorHighlight="#105313"
        android:textColorHint="#105313"
        android:textColorLink="#105313"
        app:layout_constraintBottom_toTopOf="@+id/txtsenha2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtemail" />


    <EditText
        android:id="@+id/txtsenha2"
        android:layout_width="255dp"
        android:layout_height="83dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="80dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/txtsenha2"
        android:inputType="textPassword"
        android:textColor="#105313"
        android:textColorHighlight="#105313"
        android:textColorHint="#105313"
        android:textColorLink="#105313"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsenha1" />


    <Button
        android:id="@+id/btnenviar"
        android:layout_width="197dp"
        android:layout_height="72dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#105313"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btnenviar"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsenha2" />

</androidx.constraintlayout.widget.ConstraintLayout>

